<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="10dp"
    android:background="@android:color/transparent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        >

        <TextView
            android:id="@+id/idTVTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="15dp"
            android:text="@string/time"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/idTVTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idTVTime"
            android:gravity="center"
            android:text="@string/_15temp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <ImageView
            android:id="@+id/idIVCondition"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/idTVTemperature"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo"
            android:padding="4dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/idTVWindSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idIVCondition"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/_11temp"
            android:layout_margin="4dp"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>