<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idPBLoading"
        android:visibility="visible"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/idRLHome"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/idIVBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo1"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription,HardcodedText" />

        <TextView
            android:id="@+id/idTVCityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:id="@+id/idLLEdit"
            android:layout_below="@+id/idTVCityName"
            android:weightSum="5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idTILCity"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="4.5"
                app:boxBackgroundColor="#5C3A6AF8"
                android:hint="@string/enter_your_location"
                android:padding="5dp"
                android:textColorHint="@color/white"
                app:boxCornerRadiusBottomEnd="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusTopEnd="15dp"
                app:boxCornerRadiusTopStart="15dp"
                app:hintTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idEdtCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/idIVSearch"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:contentDescription="@string/todo3"
                android:src="@drawable/ic_search"
                app:tint="@color/white"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <TextView
            android:id="@+id/idTVTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idLLEdit"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/_37temp"
            android:textColor="@color/white"
            android:textSize="70sp" />

        <ImageView
            android:id="@+id/idIVIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/idTVTemperature"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/todo4"
            android:src="@mipmap/ic_launcher"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/idTVCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idIVIcon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/condition1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/idRVWeather"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:text="@string/weather"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idRVWeather"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </RelativeLayout>




</RelativeLayout>